# ocean-sound-theme

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  LICENSE  README.md
Project Files/: Blue Ocean Sound Theme Read Me.odt  Blue Ocean Sound Theme v10.mmpz  Blue Ocean Sound Theme v11_OLD.mmpz  Blue Ocean Sound Theme v12_OLD.mmpz  Blue Ocean Sound Theme v13.mmpz  Blue Ocean Sound Theme v14.mmpz  Blue Ocean Sound Theme v7 OLD.mmpz  Blue Ocean Sound Theme v8_OLD.mmpz  Blue Ocean Sound Theme v9.mmpz  Blue_Ocean_Sound_Theme.mmpz  Ocean_Sound_Theme.mmpz  Read me for LMMS project.odt
blue-ocean-sound-theme/: index.theme
blue-ocean/stereo/: audio-volume-change.oga  completion-fail.oga  completion-partial.oga  completion-rotation.oga  desktop-login.oga  desktop-logout.oga  device-added.oga  device-removed.oga  dialog-information.oga  outcome-success.oga  phone-incoming-call.oga
ocean/: index.theme
ocean/stereo/: alarm-clock-elapsed.oga  audio-volume-change.oga  battery-caution.oga  battery-low.oga  bell-window-system.oga  button-pressed-modifier.oga  button-pressed.oga  button-pressed.oga.license  completion-success.oga  dialog-error-serious.oga  dialog-error.oga  dialog-question.oga  dialog-warning-auth.oga  dialog-warning-auth.oga.license  dialog-warning.oga  message-new-email.oga  message-new-email.oga.license  message-new-instant.oga  outcome-failure.oga  power-plug.oga  power-unplug.oga  service-login.oga  service-logout.oga  trash-empty.oga
